# bazelgette

./: .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  bootstrap_requirements.txt  main.py  pyproject.toml  reqs2.txt  test_main.py
libs/: BUILD.bazel  test_main.py
libs/greeter/: BUILD.bazel  __init__.py  main.py  test_main.py
libs/name_getter/: BUILD.bazel  __init__.py  name_getter.py
projects/proj_one/: BUILD.bazel  main.py  test_main.py
projects/proj_two/: BUILD.bazel  main.py  test_proj_two.py
