load("@rules_python//python:defs.bzl", "py_binary", "py_test")
load("@my_pip_install//:requirements.bzl", "requirement")
# load("@poetry//:dependencies.bzl", "dependency")


py_binary(
    name = "main",
    srcs = ["main.py"],
    deps = [
        "//libs:mount",
        requirement("requests")
    ],
    visibility = ["//visibility:public"]
)

py_test(
    name = "test_main",
    srcs = ["test_main.py"],
    deps = [
        "//:main",
        requirement("pytest"),
    ],
)
