load("@rules_python//python:defs.bzl", "py_library", "py_test")
# load("@poetry//:dependencies.bzl", "dependency")
load("@my_pip_install//:requirements.bzl", "requirement")


py_library(
    name = "mount",
    srcs = ["main.py", "__init__.py"],
    deps = [requirement("requests")],
    visibility = ["//projects/proj_one:__pkg__"]
)

py_test(
    name = "test_main",
    srcs = ["test_main.py"],
    deps = [
        "//:main",
        # dependency("wheel"),
        requirement("pytest"),
    ],
)
