load("@rules_python//python:defs.bzl", "py_library", "py_test")
# load("@poetry//:dependencies.bzl", "dependency")
load("@my_pip_install//:requirements.bzl", "requirement")


py_library(
    name = "greeter",
    srcs = ["main.py", "__init__.py"],
    deps = [requirement("requests")],
    visibility = [
        "//projects/proj_one:__pkg__",
        "//projects/proj_two:__pkg__",
    ]
)
