load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("@my_pip_install//:requirements.bzl", "requirement")

py_library(
    name = "greeter",
    srcs = [
        "__init__.py",
        "main.py",
    ],
    visibility = [
        "//projects/proj_one:__pkg__",
        "//projects/proj_two:__pkg__",
    ],
    deps = [requirement("requests")],
)
