load("@rules_python//python:defs.bzl", "py_binary", "py_test")
load("@my_pip_install//:requirements.bzl", "requirement")


py_binary(
    name = "main",
    srcs = ["main.py"],
    deps = [
        "//libs/greeter",
        "//libs/name_getter",
        requirement("requests")
    ],
    visibility = ["//visibility:public"]
)

py_test(
    name = "test_main",
    srcs = ["test_main.py"],
    deps = [
        "//projects/proj_one:main",
        requirement("pytest"),
    ],
)
