load("@rules_python//python:defs.bzl", "py_binary", "py_test")
load("@my_pip_install//:requirements.bzl", "requirement")

py_binary(
    name = "proj_one",
    srcs = ["main.py"],
    main = "main.py",
    visibility = ["//visibility:public"],
    deps = [
        "//libs/greeter",
        "//libs/name_getter",
        requirement("requests"),
    ],
)

py_test(
    name = "test_main",
    srcs = ["test_main.py"],
    deps = [
        "//projects/proj_one",
        requirement("pytest"),
    ],
)
